# SizeOfFile

./: .gitignore  CMakeLists.txt  main.cpp  my_name.txt
